# adventofcode

./: .gitignore  Cargo.toml
d10/: Cargo.toml
d10/src/: lib.rs  p1.rs  p2.rs
d11/: Cargo.toml
d11/src/: Cargo.toml  lib.rs  p1.rs  p2.rs
d12/: Cargo.toml
d12/src/: maze.rs  p1.rs  p2.rs  perimeter.rs  util.rs
d13/: Cargo.toml
d13/src/: lib.rs  p1.rs  p2.rs  vec2d.rs
d14/: Cargo.toml
d14/src/: lib.rs  p1.rs  p2.rs  robot.rs  vec2d.rs
d15/: Cargo.toml
d15/src/: input.rs  lib.rs  moves.rs  p1.rs  p2.rs  point.rs  warehouse.rs
d16/: Cargo.toml
d16/src/: lib.rs  maze.rs  p1.rs  p2.rs  point.rs
d17/: Cargo.toml
d17/src/: instruction.rs  lib.rs  operand.rs  p1.rs  p2.rs
d18/: Cargo.toml
d18/src/: lib.rs  p1.rs  p2.rs
d19/: Cargo.toml
d19/src/: lib.rs  p1.rs  p2.rs
d1p1/: Cargo.toml
d1p1/src/: main.rs
d1p2/: Cargo.toml
d1p2/src/: main.rs
d20/: Cargo.toml
d20/src/: cheats.rs  lib.rs  maze.rs  p1.rs  p2.rs
d21/: Cargo.toml
d21/src/: input.rs  lib.rs  p1.rs  p2.rs  test copy.py  test.py
d22/: Cargo.toml
d22/src/: p1.rs  p2.rs
d23/: Cargo.toml
d23/src/: input.rs  lib.rs  p1.rs  p2.rs
d24/: Cargo.toml
d24/src/: input.rs  lib.rs  p1.rs  p2.rs
d25/: Cargo.toml
d25/src/: input.rs  lib.rs  p1.rs  trie.rs
d2p1/: Cargo.toml
d2p1/input/: test.txt
d2p1/src/: main.rs
d2p2/: Cargo.toml
d2p2/src/: main.rs
d4p2/: Cargo.toml
d5p2/: Cargo.toml
d6p1/: Cargo.toml
d6p2/: Cargo.toml
d7p1/: Cargo.toml
d7p2/: Cargo.toml
d8p1/: Cargo.toml
d8p2/: Cargo.toml
d9p1/: Cargo.toml
d9p2/: Cargo.toml
(+36 files in other folders)
