[package]
name = "d16"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "d16p1"
path = "src/p1.rs"

[[bin]]
name = "d16p2"
path = "src/p2.rs"

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
itertools = "0.13.0"
pheap = "0.3.0"
rustc-hash = "2.1.0"
strum = { version = "0.26", features = ["derive"] }
