[package]
name = "d24"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "d24p1"
path = "src/p1.rs"

[[bin]]
name = "d24p2"
path = "src/p2.rs"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "1.0.0", features = ["display"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
petgraph = "0.6.5"
rustc-hash = "2.1.0"
